2009-05-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Code refactoring. Added new class NoImage &
	  AboutDialog.

2009-05-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py: Fixed the window position.
	  gtk.gdk.WINDOW_TYPE_HINT_DOCK. -> gtk.gdk.WINDOW_TYPE_HINT_DESKTOP.
	* base.py: Added 'import sys' (issue #6).
	* photoliststore.py: Added checking source configurations.
	* gphotoframe.desktop.in, ja.po: Updated strings.

2009-05-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, gphotoframe.glade: Added support for
	  gtk.gdk.WINDOW_TYPE_HINT_DOCK.  Added check_window_state.

2009-05-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translation.
	* gphotoframe.desktop.in: Initial import.
	* photoframe.py, gphotoframe.glade: Added the menu "Fix Photo
	  Frame" (issue #1). Added new gconf key: window_fix. 
	  Removed redundant keys: window_keep_below and window_non_movable.

2009-05-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py (PhotoFrame.set_accelerator): 
	  Added support for accelerator keys.
	* photoframe.py, preferences.py: Added new gconf keys:
	  window_keep_below and window_non_movable (issue #1).

2009-04-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photoframe.py, preferences.py, config.py, gphotoframe.glade:
	  Added new option for sticky mode.
	* preferences.py, flickr.py: Embedded Flickr api_key.
	* lib/plugins/__init__.py, photoliststore.py, preferences.py:
	  Code refactoring. __init__.py manages plug-in tokens.

2009-04-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* fspot.py: Added support for F-Spot tags.
	* gphotoframe.glade: Removed combobox initial text.

2009-04-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ja.po: Updated translation.
	* setup.py, lib/__init__.py, po/: Added gettext support.
	* setup.py, MANIFEST.in: Initial import.
	* glade.py, constants.py: Removed glade.py and added constants.py.
	* gphotoframe: Try to load local modules at first.